--- a/Pear/Controllers/Approve Profile Flow/Full Screen Approval/ApproveDetachedProfileViewController.storyboard
+++ b/Pear/Controllers/Approve Profile Flow/Full Screen Approval/ApproveDetachedProfileViewController.storyboard
@@ -88,6 +88,7 @@
                         <viewLayoutGuide key="safeArea" id="7UY-Tn-1Ai"/>
                     </view>
                     <connections>
+                        <outlet property="progressWidthConstraint" destination="Gth-1v-ZBo" id="kFX-rp-Bhn"/>
                         <outlet property="scrollView" destination="IRc-8w-TN2" id="6Th-Eb-g7P"/>
                     </connections>
                 </viewController>
