--- a/Pear/Controllers/Discovery Flow/Discovery Full Profile View/DiscoveryFullProfileViewController.storyboard
+++ b/Pear/Controllers/Discovery Flow/Discovery Full Profile View/DiscoveryFullProfileViewController.storyboard
@@ -10,10 +10,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Full Profile Scroll View Controller-->
+        <!--Discovery Full Profile View Controller-->
         <scene sceneID="o4d-i6-WZI">
             <objects>
-                <viewController id="b6J-YY-w86" customClass="FullProfileScrollViewController" customModule="Pear" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="b6J-YY-w86" customClass="DiscoveryFullProfileViewController" customModule="Pear" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="LAr-mg-Xz4">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -31,7 +31,7 @@
                                             <color key="titleColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
                                         <connections>
-                                            <action selector="backButtonClicked:" destination="b6J-YY-w86" eventType="touchUpInside" id="CH6-I7-7PQ"/>
+                                            <action selector="backButtonClicked:" destination="b6J-YY-w86" eventType="touchUpInside" id="oQ5-Go-gay"/>
                                         </connections>
                                     </button>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Jst-Tn-iZQ" userLabel="Progress View">
@@ -41,12 +41,25 @@
                                             <constraint firstAttribute="height" constant="1" id="w9x-mf-lH6"/>
                                         </constraints>
                                     </view>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eSL-1y-QLb">
+                                        <rect key="frame" x="323" y="5" width="40" height="40"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="40" id="SRY-Qd-aq0"/>
+                                            <constraint firstAttribute="width" constant="40" id="aEE-RM-kWa"/>
+                                        </constraints>
+                                        <state key="normal" image="icon-more"/>
+                                        <connections>
+                                            <action selector="moreButtonClicked:" destination="b6J-YY-w86" eventType="touchUpInside" id="UFi-w6-wXU"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstItem="2eG-b0-BBl" firstAttribute="leading" secondItem="lb2-5H-MMS" secondAttribute="leading" constant="12" id="6hc-HE-xyR"/>
                                     <constraint firstItem="Jst-Tn-iZQ" firstAttribute="leading" secondItem="lb2-5H-MMS" secondAttribute="leading" id="8sG-uV-Aj5"/>
+                                    <constraint firstAttribute="trailing" secondItem="eSL-1y-QLb" secondAttribute="trailing" constant="12" id="E1b-qW-nry"/>
                                     <constraint firstAttribute="height" constant="50" id="MYw-Fe-fYx"/>
+                                    <constraint firstItem="eSL-1y-QLb" firstAttribute="centerY" secondItem="2eG-b0-BBl" secondAttribute="centerY" id="Nv7-7F-NHc"/>
                                     <constraint firstItem="Jst-Tn-iZQ" firstAttribute="width" secondItem="lb2-5H-MMS" secondAttribute="width" id="WFM-nM-gj8"/>
                                     <constraint firstAttribute="bottom" secondItem="Jst-Tn-iZQ" secondAttribute="bottom" id="iIU-eZ-hbX"/>
                                     <constraint firstItem="2eG-b0-BBl" firstAttribute="centerY" secondItem="lb2-5H-MMS" secondAttribute="centerY" id="u2o-Xj-JrU"/>
@@ -70,7 +83,7 @@
                         <viewLayoutGuide key="safeArea" id="yBm-A3-ChV"/>
                     </view>
                     <connections>
-                        <outlet property="scrollView" destination="FuM-UC-gNb" id="lel-Ww-Xqa"/>
+                        <outlet property="scrollView" destination="FuM-UC-gNb" id="vjG-jh-ayd"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="R5u-BV-DcN" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -79,6 +92,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="icon-more" width="96" height="96"/>
         <image name="onboarding-back-button" width="120" height="120"/>
     </resources>
 </document>
